[tool.poetry]
name = "crayon-cv-anomaly"
version = "0.1.0"
authors = ["Johannes Hecher <johannes.hecher@crayon.com>"]
description = ""

[tool.poetry.dependencies]
python = "^3.9"
anomalib = "0.4.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.1.0"
flake8 = "^6.0.0"
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

