[tool.poetry]
name = "anomalibtools"
version = "0.1.1"
authors = ["Johannes Hecher <johannes.hecher@crayon.com>"]
description = ""
packages = [
    { include = "anomalibtools" }
]

[tool.poetry.dependencies]
python = "^3.8.1"
anomalib = "^0.4.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.1.0"
flake8 = "^6.0.0"
pre-commit = "^3.1.1"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
